# vidore-benchmark

./: .gitignore  get_results_summary.py  pyproject.toml
skypilot/A100/: config.yaml
skypilot/H100/: config.yaml  config_accel_1gpu.yaml  config_orig.yaml
src/vidore_benchmark/integrations/fastvlm/: __init__.py  llava_qwen.py  model.py  modeling_fastvlm.py  processing_fastvlm.py  processing_utils.py  processor.py
src/vidore_benchmark/retrievers/: __init__.py  colidefics3_retriever.py  colqwen2_5_retriever.py  fastvlm_retriever.py
tests/integrations/: test_fastvlm_integration.py
tests/retrievers/: test_fastvlm_retriever.py
